# crud_with_fastapi_and_mysql

./: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
